tests/objmap/__snapshots__/jsfmt.spec.js.snap
exports[`test objmap.js 1`] = `
"declare function promiseAllByKey<O>(o: O): Promise<$ObjMap<O,typeof $await>>;
declare function keyMirror<O>(o: O): $ObjMapi<O, <K>(k:K) => K>;

var o = keyMirror({
  FOO: null,
  BAR: null,
});

(o.FOO : \'FOO\'); // ok
(o.FOO : \'BAR\'); // error, \'FOO\' incompatible with \'BAR\'

promiseAllByKey({
  foo: Promise.resolve(0),
  bar: \'bar\',
}).then(o => {
  (o.foo: string); // error, number ~> string
  (o.bar: \'bar\'); // ok
});
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/src/printer.js:1348
        fromString(\", \").join(path.map(print, \"params\")),
                         ^

TypeError: fromString(...).join is not a function
    at genericPrintNoParens (/src/printer.js:1348:26)
    at genericPrint (/src/printer.js:166:7)
    at p (/src/printer.js:111:37)
    at exports.printComments (/src/comments.js:327:20)
    at printGenerically (/src/printer.js:111:12)
    at FastPath.call (/src/fast-path.js:113:16)
    at genericPrintNoParens (/src/printer.js:1254:25)
    at genericPrint (/src/printer.js:166:7)
    at p (/src/printer.js:111:37)
    at exports.printComments (/src/comments.js:327:20)
"
`;
